@@ -6,3 +6,7 @@ Paskolų skaičiuotuvas
 - Palūkanų atidėjimas
 - Rodyti pasirinkto mėnesių intervalo mokėjimus
 - Vaizduoti paskolos apmokėjimą grafiku
+## Kaip paleisti?
+- Reikia parsisiųsti JavaFX iš [čia](https://openjfx.io/)
+- Pridėti JVM parametrus:
+--module-path /kelias-iki-javafx-lib-katalogo/ --add-modules javafx.base,javafx.controls
